[project]
name = "cmpsc-190i"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=3.5.1",
    "evaluate>=0.4.3",
    "matplotlib>=3.10.1",
    "peft>=0.15.2",
    "scikit-learn>=1.6.1",
    "torch>=2.7.0",
    "transformers>=4.51.3",
    "trl>=0.17.0",
]
